--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/sword.png" type="image/x-icon">
-    
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Quintessential&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>TOC | Manual for Spiritual Warfare</title>
 </head>
 <body>
@@ -18,34 +21,34 @@
     </header>
 
     <main>
-        <section id="how_to_use">
+        <div class="chapter_link" id="how_to_use">
             <span>How to Use this Manual</span>
-        </section>
+        </div>
 
         <section class="part" id="preparing_for_battle">
             <h2>Part One: Preparing for Battle</h2>
 
-            <div id="know_your_enemy">
+            <div class="chapter_link" id="know_your_enemy">
                 <span>Know Your Enemy</span>
             </div>
 
-            <div id="know_your_battle">
+            <div class="chapter_link" id="know_your_battle">
                 <span>Know Your Battle</span>
             </div>
 
-            <div id="know_your_comrades">
+            <div class="chapter_link" id="know_your_comrades">
                 <span>Know Your Commander and Comrades</span>
             </div>
 
-            <div id="know_your_weapons">
+            <div class="chapter_link" id="know_your_weapons">
                 <span>Know Your Weapons</span>
             </div>
 
-            <div id="know_your_armor">
+            <div class="chapter_link" id="know_your_armor">
                 <span>Know Your Armor</span>
             </div>
 
-            <div id="keeping_enemy_out">
+            <div class="chapter_link" id="keeping_enemy_out">
                 <span>Keep the Enemy out of the Camp</span>
             </div>
         </section>
